- color-texte fixed - texte ohne bilder fixed

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -3,7 +3,7 @@
         <ion-list id="list_new">
             <ion-item style="display: none;" id="block_new" class="item-remove-animate item-avatar item-icon-right" type="item-text-wrap">
                 <img src="chat.face">
-                <p id="lastText_chat.id">chat.lastText</p>
+                <p id="lastText_chat.id" style="color: chat.color">chat.lastText</p>
             </ion-item>
         </ion-list>
 
