--- a/www/css/style.css
+++ b/www/css/style.css
@@ -13,6 +13,9 @@
     top: 50px;
 }
 
+.item > .myText {
+    color: red;
+}
 
 
 
@@ -82,3 +85,5 @@ a {
     margin-top: 10px;
     text-align: left;
 }
+
+
