--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,9 +1,80 @@
 <ion-view view-title="Account">
   <ion-content>
     <ion-list>
-    <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends
-    </ion-toggle>
+        <div class="list">
+
+            <div class="item item-divider">
+                Settings
+            </div>
+
+            <ion-toggle ng-repeat="item in settingsList"
+                        ng-model="item.checked"
+                        ng-checked="item.checked">
+                {{ item.text }}
+            </ion-toggle>
+
+            <div class="item">
+                <pre ng-bind="settingsList | json"></pre>
+            </div>
+
+            <div class="item item-divider">
+                Notifications
+            </div>
+
+            <ion-toggle ng-model="pushNotification.checked"
+                        ng-change="pushNotificationChange()">
+                Push Notifications
+            </ion-toggle>
+
+            <div class="item">
+                <pre ng-bind="pushNotification | json"></pre>
+            </div>
+
+
+
+
+
+            <div class="item item-divider">
+                Geschichtsverlauf: {{ data.serverSide }}
+            </div>
+
+            <ion-radio ng-repeat="item in serverSideList"
+                       ng-value="item.value"
+                       ng-model="data.serverSide"
+                       ng-change="serverSideChange(item)"
+                       name="server-side">
+                {{ item.text }}
+            </ion-radio>
+
+        </div>
+        <!--div class="list">
+
+            <a class="item item-icon-left" href="#">
+                <i class="icon ion-email"></i>
+                Check mail
+            </a>
+
+            <a class="item item-icon-left item-icon-right" href="#">
+                <i class="icon ion-chatbubble-working"></i>
+                Call Ma
+                <i class="icon ion-ios-telephone-outline"></i>
+            </a>
+
+            <a class="item item-icon-left" href="#">
+                <i class="icon ion-mic-a"></i>
+                Record album
+    <span class="item-note">
+      Grammy
+    </span>
+            </a>
+
+            <a class="item item-icon-left" href="#">
+                <i class="icon ion-person-stalker"></i>
+                Friends
+                <span class="badge badge-assertive">0</span>
+            </a>
+
+        </div-->
     </ion-list>
   </ion-content>
 </ion-view>
