modified lastText in text

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -4,7 +4,7 @@
         <ion-list id="list_new">
             <ion-item style="display: none;" id="block_new" class="item-remove-animate item-avatar item-icon-right" type="item-text-wrap">
                 <img src="chat.face">
-                <p id="lastText_chat.id" class="chat.className" chat.lol>chat.lastText</p>
+                <p id="text_chat.id" class="chat.className" chat.lol>chat.text</p>
             </ion-item>
         </ion-list>
 
