--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Account">
+<ion-view view-title="Settings">
   <ion-content>
     <ion-list>
         <div class="list">
@@ -43,38 +43,10 @@
                        ng-model="data.serverSide"
                        ng-change="serverSideChange(item)"
                        name="server-side">
-                {{ item.text }}
+                {{ item.text }} - {{ item.value }}
             </ion-radio>
 
         </div>
-        <!--div class="list">
-
-            <a class="item item-icon-left" href="#">
-                <i class="icon ion-email"></i>
-                Check mail
-            </a>
-
-            <a class="item item-icon-left item-icon-right" href="#">
-                <i class="icon ion-chatbubble-working"></i>
-                Call Ma
-                <i class="icon ion-ios-telephone-outline"></i>
-            </a>
-
-            <a class="item item-icon-left" href="#">
-                <i class="icon ion-mic-a"></i>
-                Record album
-    <span class="item-note">
-      Grammy
-    </span>
-            </a>
-
-            <a class="item item-icon-left" href="#">
-                <i class="icon ion-person-stalker"></i>
-                Friends
-                <span class="badge badge-assertive">0</span>
-            </a>
-
-        </div-->
     </ion-list>
   </ion-content>
 </ion-view>
