--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -1,12 +1,13 @@
 <ion-view view-title="Map">
   <ion-content>
-    <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
-        <img ng-src="{{chat.face}}">
-        <h2>{{chat.name}}</h2>
-        <p>{{chat.text}}</p>
-
-      </ion-item>
-    </ion-list>
+      <ion-scroll direction="y" class="available-scroller">
+      <ion-list>
+          <ion-item>
+              I love kittens!
+              <ion-option-button class="button-positive">Share</ion-option-button>
+              <ion-option-button class="button-assertive">Edit</ion-option-button>
+          </ion-item>
+      </ion-list>
+          </ion-scroll>
   </ion-content>
 </ion-view>
