--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -3,20 +3,20 @@ Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top tabs-color-active-positive tabs-top">
+<ion-tabs class="tabs-icon-top tabs-color-active-positive tabs-top tabs-striped tabs-color-assertive ">
 
-  <!-- Dashboard Tab -->
-  <ion-tab title="Spiel" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <!-- Game Tab -->
+  <ion-tab title="Spiel" icon-off="ion-ios-pulse-strong" icon-on="ion-ios-pulse-strong" href="#/tab/game">
+    <ion-nav-view name="tab-game"></ion-nav-view>
   </ion-tab>
 
   <!-- Map Tab -->
-  <ion-tab title="Karte" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/map">
+  <ion-tab title="Karte" icon-off="ion-map" icon-on="ion-map" href="#/tab/map">
     <ion-nav-view name="tab-map"></ion-nav-view>
   </ion-tab>
 
   <!-- Settings Tab -->
-  <ion-tab title="Einstellungen" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/settings">
+  <ion-tab title="Einstellungen" icon-off="ion-ios-cog" icon-on="ion-ios-cog" href="#/tab/settings">
     <ion-nav-view name="tab-settings"></ion-nav-view>
   </ion-tab>
 
