--- a/www/templates/tab-game.html
+++ b/www/templates/tab-game.html
@@ -4,23 +4,22 @@
         <ion-list id="list_new">
 
 
-            <ion-item ng-repeat="(itemKey, itemValue) in readedChatsList"
-                      ng-value="itemValue.value"
+            <ion-item ng-repeat="(key, item) in readedChatsList"
+                      ng-value="item.value"
                       ng-model="data.chats"
                       name="game"
-                      ng-class="itemValue.isButton == '1' ? ' blabla ' : (itemValue.face == null ? '' : ' item-avatar item-remove-animate item-icon-right')"
+                      ng-class="(item.face == null ? '' : ' item-avatar item-remove-animate item-icon-right')"
                       type="item-text-wrap"
-                      id="ion-item_{{itemValue.id}}">
+                      id="ion-item_{{item.id}}">
 
-                <img src="{{ itemValue.face }}"
-                     ng-show="itemValue.face != null && itemValue.isButton != '1' && itemValue.readed == '1'">
+                <img src="{{ item.face }}" ng-if="item.face != null && item.isButton != '1' && item.readed == '1'">
 
-                <p ng-show="itemValue.isButton != '1' && itemValue.readed == '1'" id="{{ itemValue.id }}"
-                   class="{{ itemValue.className }}">{{ itemValue.text }}</p>
+                <p ng-show="item.isButton != '1' && item.readed == '1'" id="{{ item.id }}"
+                   class="{{ item.className }}">{{ item.text }}</p>
 
 
-                <div class="button-bar" ng-show="itemValue.isButton == '1' && itemValue.readed == '1'">
-                    <div ng-repeat="(buttonKey, buttonValue) in itemValue.buttons"
+                <div class="button-bar" ng-show="item.isButton == '1' && item.readed == '1'">
+                    <div ng-repeat="(buttonKey, buttonValue) in item.buttons"
                          class="button button-outline button-block"
                          ng-if="buttonKey < 3">
                         <a ng-class="{'button-positive active': isActive('{{button.id}}', 'left')}"
@@ -28,17 +27,15 @@
                     </div>
 
                     <!-- Split-Button -->
-                    <div uib-dropdown is-open="status.isopen" ng-if="splitButton(itemKey, itemValue.id)">
-                        <a class="button button-outline button-block icon ion-navicon" id="single-button_{{itemKey}}"
+                    <div uib-dropdown is-open="status.isopen" ng-if="splitButton(key, item.id)">
+                        <a class="button button-outline button-block icon ion-navicon" id="single-button_{{key}}"
                            type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled"
-                           ng-click="chatChange('{{itemValue.id}}')"></a>
-                        <ul uib-dropdown-menu role="menu" aria-labelledby="single-button_{{itemKey}}">
-                            <li role="menuitem">
-                                <a href="#"
-                                   ng-click="chatChange('button')"
-                                   ng-repeat="(buttonKey, buttonValue) in itemValue.buttons"
-                                   ng-if="buttonKey > 2">{{buttonValue}}</a></li>
-                            <li class="divider"></li>
+                           ng-click="chatChange('{{item.id}}')"></a>
+                        <ul uib-dropdown-menu role="menu" aria-labelledby="single-button_{{key}}">
+                            <li role="menuitem" ng-repeat="(buttonKey, buttonValue) in item.buttons" ng-if="buttonKey > 2">
+                                    <a href="#" ng-click="chatChange('button')">{{buttonValue}}</a>
+                                    <div ng-class="splitButtonLengthIsMoreThanKey('{{buttonKey}}') ? 'divider' : ''"></div>
+                            </li>
                         </ul>
                     </div>
                     <!-- Split-Button-Ends here -->
