--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -3,7 +3,7 @@ Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top tabs-color-active-positive tabs-top tabs-striped tabs-color ">
+<ion-tabs class="tabs-icon-top tabs-color-active-positive tabs-top tabs-striped t">
 
   <!-- Game Tab -->
   <ion-tab title="Spiel" icon-off="ion-ios-pulse-strong" icon-on="ion-ios-pulse-strong" href="#/tab/game">
