modified-body css design  @media (min-width: 360px) {

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -102,7 +102,7 @@ a {
 @media (min-width: 360px) {
     .view-container{
 
-        background-image: url("../img/layout alien 1.png");
+        background-image: url("../img/layout.png");
 
     }
 
