--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,7 +6,7 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive tabs-top tabs-striped tabs-color-assertive ">
 
   <!-- Game Tab -->
-  <ion-tab title="Spiel" icon-off="ion-ios-pulse-strong" icon-on="ion-ios-pulse-strong" href="#/tab/game">
+  <ion-tab title="Game" icon-off="ion-ios-pulse-strong" icon-on="ion-ios-pulse-strong" href="#/tab/game">
     <ion-nav-view name="tab-game"></ion-nav-view>
   </ion-tab>
 
