--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,13 +6,13 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive tabs-top tabs-striped tabs-color-assertive ">
 
   <!-- Game Tab -->
-  <ion-tab title="Game" icon-off="ion-ios-pulse-strong" icon-on="ion-ios-pulse-strong" href="#/tab/game">
+  <ion-tab title="Game" icon-off="ion-ios-pulse-strong" icon-on="ion-ios-pulse-strong" href="#/tab/game" style="text-align: left;">
     <ion-nav-view name="tab-game"></ion-nav-view>
   </ion-tab>
 
   <!-- Map Tab -->
-  <ion-tab title="Karte" icon-off="ion-map" icon-on="ion-map" href="#/tab/map">
-    <ion-nav-view name="tab-map"></ion-nav-view>
+  <ion-tab icon-off="ion-navicon-round" icon-on="ion-navicon-round" href="#/tab/home">
+    <ion-nav-view name="tab-home"></ion-nav-view>
   </ion-tab>
 
   <!-- Settings Tab -->
