--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Map">
+<ion-view view-title="Home">
   <ion-content>
       <ion-scroll direction="y" class="available-scroller">
       <ion-list>
