--- a/www/css/layout.css
+++ b/www/css/layout.css
@@ -74,7 +74,7 @@
 }
 .content_strech_middle{
     background-image: url("../img/320x480/320x480_05.gif");
-    background-repeat: repeat-x;
+    background-repeat: repeat;
     width: 100%;
     min-width: 227px;
     margin-bottom: 19em;
