--- a/www/css/style.css
+++ b/www/css/style.css
@@ -143,43 +143,16 @@ a {
     text-align: left;
 }
 
-@media (min-width: 360px) {
-    .view-container{
-/*
-        background-image: url("../img/layout.png");
-        */
 
-    }
 
-    .pane, .view {
-        background-color: transparent;
-    }
-    .scroll-content{
-        margin: 12px;
-        margin-bottom: 50px;
-        margin-top:17px;
-    }
 
-    .tabs-striped .tabs {
-        background-color: transparent;
-        border-style: none;
-        margin: 0 auto;
-    }
 
-    .tab-item {
-        flex: none;
-        width:70px;
-        padding-top:12px;
-        height: 60px;
-    }
 
-    .item{
-        background-color: transparent;
-        background: rgba(80,80,100,0.3);
-        margin: 20px;
-    }
+
+.view-container{
+    top: 0px;
+    left: 0px;
 }
-
 .pane, .view {
     background-color: transparent;
 }
@@ -197,10 +170,10 @@ a {
 
 .tab-item {
     flex: none;
-
-    width: 95px;
-    padding-top:12px;
+    width: 90px;
+    padding-top: 25px;
     height: 60px;
+
 }
 
 .item{
@@ -208,3 +181,34 @@ a {
     background: rgba(80,80,100,0.3);
     margin: 20px;
 }
+
+
+@media (min-width: 360px) {
+    .tab-item {
+        width: 113px;
+    }
+}
+
+@media (min-width: 768px) {
+    .tab-item {
+        width: 410px;
+        padding-top:0px;
+        height: 50px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
