--- a/www/css/style.css
+++ b/www/css/style.css
@@ -158,7 +158,7 @@ a {
 }
 .scroll-content{
     margin: 12px;
-    margin-bottom: 50px;
+    margin-bottom: 65px;
     margin-top:17px;
 }
 
@@ -172,6 +172,7 @@ a {
     flex: none;
     width: 90px;
     padding-top: 25px;
+    padding-bottom: 25px;
     height: 60px;
 
 }
@@ -179,7 +180,7 @@ a {
 .item{
     background-color: transparent;
     background: rgba(80,80,100,0.3);
-    margin: 20px;
+    margin: 22px;
 }
 
 
