--- a/www/css/layout.css
+++ b/www/css/layout.css
@@ -1,110 +1,213 @@
-.page {
-    min-height: 480px;
-    height: 100%;
-}
-.header {
-    display: flex;
-    height: 55px;
-    min-height: 55px;
-}
-.content {
-    display: flex;
-    height: 194px;
-    align-items: stretch;
-}
 
-.content_strech {
-    color: #000000;
-    display: flex;
-    height: 100%;
-}
+@media (min-width: 320px) {
+    .page {
+        min-height: 480px;
+        height: 100%;
+    }
 
-.footer {
-    display: flex;
-    height: 68px;
-    margin-top: -68px;
-}
+    .header {
+        display: flex;
+        min-height: 55px;
+    }
 
+    .content {
+        display: flex;
+        height: 194px;
+        align-items: stretch;
+    }
 
+    .content_strech {
+        color: #000000;
+        display: flex;
+        height: 100%;
+    }
 
-.header_left{
-    background-image: url("../img/320x480/png/320x480_01.png");
-    background-repeat: no-repeat;
-    min-width: 159px;
-}
-.header_middle{
-    background-image: url("../img/320x480/png/320x480_02.png");
-    background-repeat: repeat-x;
-    width: 100%;
-}
+    .footer {
+        display: flex;
+        height: 68px;
+        margin-top: -68px;
+    }
 
-.header_right{
-    background-image: url("../img/320x480/png/320x480_03.png");
-    background-repeat: no-repeat;
-    min-width: 158px;
-}
+    .header_left {
+        background-image: url("../img/320x480/png/320x480_01.png");
+        background-repeat: no-repeat;
+        min-width: 159px;
+    }
 
+    .header_middle {
+        background-image: url("../img/320x480/png/320x480_02.png");
+        background-repeat: repeat-x;
+        width: 100%;
+    }
 
+    .header_right {
+        background-image: url("../img/320x480/png/320x480_03.png");
+        background-repeat: no-repeat;
+        min-width: 158px;
+    }
 
-.content_left{
-    background-image: url("../img/320x480/png/320x480_04.png");
-    background-repeat: no-repeat;
-    min-width: 48px;
-}
-.content_middle{
-    background-image: url("../img/320x480/png/320x480_05.png");
-    background-repeat: repeat;
-    width: 100%;
-    min-width: 227px;
-}
+    .content_left {
+        background-image: url("../img/320x480/png/320x480_04.png");
+        background-repeat: no-repeat;
+        min-width: 48px;
+    }
 
-.content_right{
-    background-image: url("../img/320x480/png/320x480_06.png");
-    background-repeat: no-repeat;
+    .content_middle {
+        background-image: url("../img/320x480/png/320x480_05.png");
+        background-repeat: repeat;
+        width: 100%;
+        min-width: 227px;
+    }
 
-    min-width: 45px;
-}
+    .content_right {
+        background-image: url("../img/320x480/png/320x480_06.png");
+        background-repeat: no-repeat;
 
+        min-width: 45px;
+    }
 
-.content_strech_left{
-    background-image: url("../img/320x480/png/320x480_07.png");
-    min-width: 48px;
-    margin-bottom: 19em;
-}
-.content_strech_middle{
-    background-image: url("../img/320x480/png/320x480_05.png");
-    background-repeat: repeat;
-    width: 100%;
-    min-width: 227px;
-    margin-bottom: 19em;
-}
+    .content_strech_left {
+        background-image: url("../img/320x480/png/320x480_07.png");
+        min-width: 48px;
+        margin-bottom: 19em;
+    }
 
-.content_strech_right{
-    background-image: url("../img/320x480/png/320x480_08.png");
-    min-width: 45px;
-    margin-bottom: 19em;
-}
+    .content_strech_middle {
+        background-image: url("../img/320x480/png/320x480_05.png");
+        background-repeat: repeat;
+        width: 100%;
+        min-width: 227px;
+        margin-bottom: 19em;
+    }
 
+    .content_strech_right {
+        background-image: url("../img/320x480/png/320x480_08.png");
+        min-width: 45px;
+        margin-bottom: 19em;
+    }
 
+    .footer_left {
+        background-image: url("../img/320x480/png/320x480_13.png");
+        background-repeat: no-repeat;
+        min-width: 148px;
 
-.footer_left{
-    background-image: url("../img/320x480/png/320x480_13.png");
-    background-repeat: no-repeat;
-    width: 148px;
-    min-width: 148px;
+    }
 
-}
-.footer_middle{
-    background-image: url("../img/320x480/png/320x480_14.png");
-    background-repeat: repeat-x;
-    width: 100%;
+    .footer_middle {
+        background-image: url("../img/320x480/png/320x480_14.png");
+        background-repeat: repeat-x;
+        width: 100%;
+    }
 
-}
-
-.footer_right{
-    background-image: url("../img/320x480/png/320x480_15.png");
-    background-repeat: no-repeat;
-    width: 169px;
-    min-width: 169px;
+    .footer_right {
+        background-image: url("../img/320x480/png/320x480_15.png");
+        background-repeat: no-repeat;
+        min-width: 169px;
+    }
 }
 
+
+@media (min-width: 360px) {
+    .page {
+        min-height: 640px;
+        height: 100%;
+    }
+
+    .header {
+        display: flex;
+        min-height: 74px;
+    }
+
+    .content {
+        display: flex;
+        height: 259px;
+        align-items: stretch;
+    }
+
+    .content_strech {
+        color: #000000;
+        display: flex;
+        height: 100%;
+    }
+
+    .footer {
+        display: flex;
+        min-height: 91px;
+        margin-top: -91px;
+    }
+
+    .header_left {
+        background-image: url("../img/360x640/png/360x640_01.png");
+        background-repeat: no-repeat;
+        min-width: 179px;
+    }
+
+    .header_middle {
+        background-image: url("../img/360x640/png/360x640_02.png");
+        background-repeat: repeat-x;
+        width: 100%;
+    }
+
+    .header_right {
+        background-image: url("../img/360x640/png/360x640_03.png");
+        background-repeat: no-repeat;
+        min-width: 178px;
+    }
+
+    .content_left {
+        background-image: url("../img/360x640/png/360x640_04.png");
+        background-repeat: no-repeat;
+        min-width: 45px;
+    }
+
+    .content_middle {
+        background-image: url("../img/360x640/png/360x640_05.png");
+        background-repeat: repeat;
+        width: 100%;
+        min-width: 273px;
+    }
+
+    .content_right {
+        background-image: url("../img/360x640/png/360x640_06.png");
+        background-repeat: no-repeat;
+        min-width: 42px;
+    }
+
+    .content_strech_left {
+        background-image: url("../img/360x640/png/360x640_07.png");
+        min-width: 45px;
+        margin-bottom: 26em;
+    }
+
+    .content_strech_middle {
+        background-image: url("../img/360x640/png/360x640_05.png");
+        background-repeat: repeat;
+        width: 100%;
+        min-width: 273px;
+        margin-bottom: 26em;
+    }
+
+    .content_strech_right {
+        background-image: url("../img/360x640/png/360x640_08.png");
+        min-width: 42px;
+        margin-bottom: 26em;
+    }
+
+    .footer_left {
+        background-image: url("../img/360x640/png/360x640_13.png");
+        background-repeat: no-repeat;
+        min-width: 165px;
+    }
+
+    .footer_middle {
+        background-image: url("../img/360x640/png/360x640_14.png");
+        background-repeat: repeat-x;
+        width: 100%;
+    }
+
+    .footer_right {
+        background-image: url("../img/360x640/png/360x640_15.png");
+        background-repeat: no-repeat;
+        min-width: 189px;
+    }
+}
