profiles added png

--- a/www/templates/tab-game.html
+++ b/www/templates/tab-game.html
@@ -12,7 +12,7 @@
                       type="item-text-wrap"
                       id="ion-item_{{item.id}}">
 
-              <img src="img/profiles/{{item.nameTitle.name}}.gif"
+              <img src="img/profiles/{{item.nameTitle.name}}.png"
                    ng-show="item.nameTitle.faceExists == '1' && item.isButton != '1' && item.readed == '1'"/>
 
 
