--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,7 +11,7 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Map Tab -->
-  <ion-tab icon-off="ion-navicon-round" icon-on="ion-navicon-round" href="#/tab/home">
+  <ion-tab title="Menü" icon-off="ion-navicon-round" icon-on="ion-navicon-round" href="#/tab/home">
     <ion-nav-view name="tab-home"></ion-nav-view>
   </ion-tab>
 
