--- a/www/css/layout.css
+++ b/www/css/layout.css
@@ -211,3 +211,109 @@
         min-width: 189px;
     }
 }
+
+
+@media (min-width: 768px) {
+    .page {
+        min-height: 1024px;
+        height: 100%;
+    }
+
+    .header {
+        display: flex;
+        min-height: 135px;
+    }
+
+    .content {
+        display: flex;
+        height: 372px;
+        align-items: stretch;
+    }
+
+    .content_strech {
+        color: #000000;
+        display: flex;
+        height: 100%;
+    }
+
+    .footer {
+        display: flex;
+        min-height: 156px;
+        margin-top: -156px;
+    }
+
+    .header_left {
+        background-image: url("../img/768x1024/png/768x1024_01.png");
+        background-repeat: no-repeat;
+        min-width: 384px;
+    }
+
+    .header_middle {
+        background-image: url("../img/768x1024/png/768x1024_02.png");
+        background-repeat: repeat-x;
+        width: 100%;
+    }
+
+    .header_right {
+        background-image: url("../img/768x1024/png/768x1024_03.png");
+        background-repeat: no-repeat;
+        min-width: 381px;
+    }
+
+    .content_left {
+        background-image: url("../img/768x1024/png/768x1024_04.png");
+        background-repeat: no-repeat;
+        min-width: 102px;
+    }
+
+    .content_middle {
+        background-image: url("../img/768x1024/png/768x1024_05.png");
+        background-repeat: repeat;
+        width: 100%;
+        min-width: 577px;
+    }
+
+    .content_right {
+        background-image: url("../img/768x1024/png/768x1024_06.png");
+        background-repeat: no-repeat;
+        min-width: 89px;
+    }
+
+    .content_strech_left {
+        background-image: url("../img/768x1024/png/768x1024_07.png");
+        min-width: 45px;
+        margin-bottom: 41em;
+    }
+
+    .content_strech_middle {
+        background-image: url("../img/768x1024/png/768x1024_05.png");
+        background-repeat: repeat;
+        width: 100%;
+        min-width: 577px;
+        margin-bottom: 41em;
+    }
+
+    .content_strech_right {
+        background-image: url("../img/768x1024/png/768x1024_08.png");
+        min-width: 89px;
+        margin-bottom: 41em;
+    }
+
+    .footer_left {
+        background-image: url("../img/768x1024/png/768x1024_13.png");
+        background-repeat: no-repeat;
+        min-width: 357px;
+    }
+
+    .footer_middle {
+        background-image: url("../img/768x1024/png/768x1024_14.png");
+        background-repeat: repeat-x;
+        width: 100%;
+    }
+
+    .footer_right {
+        background-image: url("../img/768x1024/png/768x1024_15.png");
+        background-repeat: no-repeat;
+        min-width: 400px;
+    }
+}
